# cria_index

./: README.md
cria-index-core/: pyproject.toml
cria-index-core/tests/: test_classes.py
cria-index-integrations/llms/cria-index-llms-huggingface/: pyproject.toml
cria-index-integrations/llms/cria-llms-openai/: pyproject.toml
cria-index-integrations/vector-stores/cria-index-vector-stores-elasticsearch/: .gitignore  pyproject.toml
cria-index-integrations/vector-stores/cria-index-vector-stores-elasticsearch/examples/: ElasticSearchVectorStore.ipynb
cria-index-integrations/vector-stores/cria-index-vector-stores-elasticsearch/tests/: test_classes.py
cria-index-integrations/vector-stores/cria-index-vector-stores-qdrant/: pyproject.toml
cria-index-integrations/vector-stores/cria-index-vector-stores-qdrant/examples/: QdrantVectorStore.ipynb
cria-index-integrations/vector-stores/cria-index-vector-stores-qdrant/tests/: test_classes.py
cria-index-integrations/vector-stores/cria-vector-stores-elasticsearch/: pyproject.toml
cria-index-plugins/loaders/cria-index-loader-plugin-gmail/: pyproject.toml
cria-index-plugins/loaders/cria-index-loader-plugin-notion/: pyproject.toml
cria-index-plugins/loaders/cria-index-plugin-loader-gmail/: .gitignore
cria-index-plugins/loaders/cria-index-plugin-loader-notion/: pyproject.toml
cria-index-plugins/packs/cria-index-pack-plugin-rag-evaluator/: pyproject.toml
cria-index-plugins/tools/cria-index-plugin-tool-arxiv/: pyproject.toml
cria-index-plugins/tools/cria-index-plugin-tool-arxiv/tests/: test_classes.py
(+12 files in other folders)
