[tool.poetry]
name = "cria-index-tool-plugin-arxiv"
version = "0.1.0"
description = ""
authors = ["Andrei Fajardo <andrei@nerdai.io>"]
readme = "README.md"
packages = [{include = "cria_index"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
